--- a/camelstraw/requirements.txt
+++ b/camelstraw/requirements.txt
@@ -3,10 +3,18 @@ APScheduler==3.5.3
 async-timeout==3.0.1
 attrs==18.2.0
 chardet==3.0.4
+Click==7.0
 idna==2.7
 idna-ssl==1.1.0
+Jinja2==2.10
+livereload==2.5.2
+Markdown==3.0.1
+MarkupSafe==1.0
+mkdocs==1.0.4
 multidict==4.4.2
 pytz==2018.5
+PyYAML==3.13
 six==1.11.0
+tornado==5.1.1
 tzlocal==1.5.1
 yarl==1.2.6
