--- a/camelstraw/requirements.txt
+++ b/camelstraw/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==3.0.1
 attrs==18.2.0
 chardet==3.0.4
 Click==7.0
+dill==0.2.8.2
 idna==2.7
 idna-ssl==1.1.0
 Jinja2==2.10
@@ -12,6 +13,11 @@ Markdown==3.0.1
 MarkupSafe==1.0
 mkdocs==1.0.4
 multidict==4.4.2
+multiprocess==0.70.6.1
+pathos==0.2.2.1
+pox==0.2.4
+ppft==1.6.4.8
+pyreadline==2.1
 pytz==2018.5
 PyYAML==3.13
 six==1.11.0
